# peanut

./: .gitignore  Cargo.toml  README.md  compile.bash  compile.py  container.py  main.py  options.peanut  peanut.code-workspace  requirements.txt  resources.qrc  resources_rc.py
binaries/ffmpeg/doc/: developer.html  faq.html  ffmpeg-all.html  ffmpeg-devices.html  platform.html
classes/: playlist.py
classes/Audio/: service.py
classes/audio/: service.py
classes/config/: manager.py  service.py
classes/event/: manager.py  service.py
classes/file/: service.py
classes/generatedui/: mainwindow.ui  mainwindow_ui.py
classes/gui/: handler_mainwindow.py  manager.py  service.py
classes/hotkey/: manager.py  service.py
classes/id/: service.py
classes/keyboard/: manager.py
classes/log/: service.py
classes/manager/: manager.py  service.py
classes/playlist/: downloader.py  manager.py  playlist.py  process.py  service.py  track.py
classes/richpresence/: service.py
classes/service/: service.py
classes/thread/: manager.py  service.py
customwidgets/: registercircleimagebutton.py  registerscrollprogressbar.py  registersquareframe.py  scrollprogressbar.py
customwidgets/circleimagebutton/: circleimagebutton.py
customwidgets/scrollprogressbar/: progresscirclebar.py  scrollprogressbar.py
customwidgets/squareframe/: squareframe.py
customwidgets/trackframe/: trackframe.py
fonts/: peanuticons-selection.json
gui/main/: gui.ui  gui_ui.py
legacy_python/: .gitignore  main.py  requirements.txt  resources.qrc  resources_rc.py
legacy_python/classes/audio/: service.py
legacy_python/classes/config/: service.py
legacy_python/classes/file/: service.py
legacy_python/classes/generatedui/: mainwindow_ui.py
legacy_python/classes/gui/: handler_mainwindow.py  service.py
legacy_python/classes/id/: service.py
legacy_python/customwidgets/: registerloadwidget.py  registerprogresscirclebar.py  registertrackframe.py
other stuff/: evenmoreideas.py  other.py  otheridea.py
resources/: resources.qrc  resources_rc.py
src/: core.rs  lib.rs  main.rs  service.rs  util.rs
src/service/: audio.rs  file.rs  gui.rs  id.rs  playlist.rs  process.rs
src/util/: service.rs  sync.rs
(+58 files in other folders)
