[package]
name = "peanut"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
futures = "0.3"
iced = { version = "0.14.0", features = ["tokio", "debug", "image"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
url = { version = "2.5", features = ["serde"] }
regex = { version = "1.12", features = ["std"] }
strum = "0.27"
strum_macros = "0.27.2"
rand = "0.10"
parking_lot = "0.12.5"
kira = "0.12"
symphonia = { version = "0.5.5", features = ["isomp4", "aac"] }
atomic_float = "1.1.0"
musicbrainz_rs = { version = "0.12", features = ["async"] }
lazy_static = "1.5.0"
image = { version = "0.25.9", features = ["jpeg", "png", "webp"] }
reqwest = "0.13"
chrono = "0.4.43"
indexmap = "2"
